feat: add auth and crud user and readme maj
