# src/app.ts
@@ -5,18 +5,22 @@ import ownerRoutes from "./routes/owner.routes";
 import veterinarianRoutes from "./routes/veterinarian.routes";
 import { errorMiddleware } from "./middlewares/errors.middlewares";
 import treatmentRoutes from "./routes/treatment.routes";
+import userRoutes from "./routes/user.routes";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "../swagger-output.json";
 import vaccinationRoutes from "./routes/vaccination.routes";
+import authRoutes from "./routes/auth.routes";
 export const app = express();
 
 app.use(cors());
 app.use(express.json());
 
 app.use("/api/owners", ownerRoutes);
+app.use("/api/users", userRoutes);
 app.use("/api/veterinarians", veterinarianRoutes);
 app.use("/api/treatments", treatmentRoutes);
 app.use("/api/vaccinations", vaccinationRoutes);
+app.use("/api/auth", authRoutes);
 
 app.use(errorMiddleware);
 
