# src/routes/owner.routes.ts
@@ -1,35 +1,20 @@
 import { Router, Request, Response } from "express";
-import { getOwnersController , getOwnerByIdController, createOwnerController, updateOwnerController, deleteOwnerController } from "../controllers/owner.controller";
+import {
+  getOwnersController,
+  getOwnerByIdController,
+  createOwnerController,
+  updateOwnerController,
+  deleteOwnerController,
+} from "../controllers/owner.controller";
 const router = Router();
 
 router.get("/", getOwnersController);
 
 router.get("/:id", getOwnerByIdController);
 
-router.post(
-  "/",
-  /* #swagger.requestBody = {
-        required: true,
-        content: {
-          "application/json": {
-            schema: {
-              type: "object",
-              required: ["first_name", "last_name", "phone", "email", "adress"],
-              properties: {
-                first_name: { type: "string" },
-                last_name: { type: "string" },
-                phone: { type: "string" },
-                email: { type: "string" },
-                adress: { type: "string" }
-              }
-            }
-          }
-        }
-  } */
-  createOwnerController
-);
+router.post("/", createOwnerController);
 
-router.put("/:id", updateOwnerController );
+router.put("/:id", updateOwnerController);
 
 router.delete("/:id", deleteOwnerController);
 
